--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -281,7 +281,7 @@
       }
 
       #menu-primary > li {
-         margin-right: 1em;
+         margin-right: 0.9em;
       }
    }
 } /* END #primary-menu */
