--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -39,7 +39,7 @@
   font-weight   :   $font-widget-weight;
   line-height   :   $font-widget-lineheight;
   padding: 0.5em 0.5em 0.5em 1.5em;
-  @media all and (min-width:800px){
+  @media all and (min-width:1024px){
      color:#000;
      padding: 0.5em;
   }
